# social-media-presence-control-panel

./: README.md  architecture.md
app/: Cargo.toml
app/src/: main.rs
outlib/: Cargo.toml
